# arraykit

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  arraykit.c  arraykit.pyi  debug.py  noxfile.py  profile.py  pylintrc  pyproject.toml  reference.py  requirements-build-3_11.txt  requirements-build-3_12.txt  requirements-build-3_13.txt  requirements-build-3_14.txt  requirements-build-backward.txt  requirements-build.txt  requirements-dev-3_08.txt  requirements-dev-3_11.txt  requirements-dev-3_12.txt  requirements-dev-3_13.txt  requirements-dev-3_14.txt  requirements-test-backward.txt  requirements-test-forward.txt  requirements-test.txt  requirements.txt  script.py  setup.py  tasks.py  test_unit.py
.github/problem-matchers/: gcc.json  msvc.json
.github/workflows/: build-pyodide.yml  ci.yml
arraykit/: __init__.py  _arraykit.c  arraykit.pyi
arraykit/core/: util.h  util.pyi
doc/articles/: arg_equal_1d.py  array2d_to_1d.py  array2d_tuple_iter.py  array_to_tuple_array.py  array_to_tuple_iter.py  block_index.py  dta.md  dta.py  dta.txt  first_true.py  first_true_1d.py  first_true_2d.py  nonzero_1d.py
performance/: __main__.py  get-all-any.py  main.py  npy-opt.py
performance/auto_map/: fixtures.py  get-all-any.py  npy-opt.py
performance/reference/: array_go.py  block_index.py  util.py
src/: __init__.py  __init__.pyi  _arraykit.c  array_go.c  array_go.h  array_to_tuple.c  array_to_tuple.h  auto_map.c  auto_map.h  block_index.c  block_index.h  delimited_to_arrays.c  delimited_to_arrays.h  file_parsing.c  file_parsing.h  methods.c  methods.h  tri_map.c  tri_map.h  utilities.c  utilities.h
test/: test_arg_equal_1d.py  test_array_go.py  test_astype_array.py  test_auto_map.py  test_auto_map_property.py  test_block_index.py  test_delimited_to_arrays.py  test_delimited_to_arrays_integration.py  test_delimited_to_arrays_property.py  test_nonzero_1d.py  test_nonzero_1d_property.py  test_objectable.py  test_pyi.py  test_split_after_count.py  test_transition_slices_from_group.py  test_tri_map.py  test_type_discovery.py  test_util.py
