[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "numpy>=2.2"
]
build-backend = "setuptools.build_meta"


[project]
name = "arraykit"
version = "1.2.0"
description = "Array utilities for StaticFrame"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"

authors = [
  { name = "Christopher Ariza" },
  { name = "Brandt Bucher" },
  { name = "Charles Burkland" },
]
license = "MIT"
keywords = ["numpy", "array"]
dependencies = [
  "numpy>=1.24.3",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Programming Language :: C",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/static-frame/arraykit"

[tool.setuptools]
# Your src layout is already “src/” but package_dir currently maps the top-level
# module "arraykit" to "src". Keep that mapping explicitly:
package-dir = { "arraykit" = "src" }

[tool.setuptools.package-data]
arraykit = ["__init__.pyi", "py.typed"]

# Define your C extension here. We'll add NumPy's include/lib paths dynamically
# via a tiny setup.py shim (below).
# [tool.setuptools.ext-modules."arraykit._arraykit"]
# sources = [
#   "src/_arraykit.c",
#   "src/array_go.c",
#   "src/array_to_tuple.c",
#   "src/block_index.c",
#   "src/delimited_to_arrays.c",
#   "src/methods.c",
#   "src/tri_map.c",
#   "src/auto_map.c",
# ]
# include-dirs = ["src"]
# define-macros = [["AK_VERSION", "1.2.0"]]

# # If you truly need to link to 'npymath', leave libraries empty here and let the
# # setup.py shim add it only when/where it exists.
# libraries = ["npymath"]  # (we'll add dynamically in the shim if present)
